# celery-throttle

./: CHANGELOG.md  CONFIGURATION.md  EXAMPLES.md  QUICKREF.md  README.md  auto_worker.py  celery_app.py  dynamic_worker.py  example_usage.py  main.py  monitor.py  pyproject.toml  queue_manager.py  queue_metrics.py  queue_performance_monitor.py  rate_limit_registry.py  rate_limiter.py  requirements.txt  run_example.py  start_universal_workers.sh  start_workers.py  test_rate_limiter.py  universal_queue_router.py
.forgejo/workflows/: main.yaml
celery_throttle/: __init__.py  config.py  main.py
celery_throttle/cli/: __init__.py  main.py
celery_throttle/core/: __init__.py  rate_limiter.py
celery_throttle/monitoring/: __init__.py  worker_inspector.py
celery_throttle/queue/: __init__.py  manager.py
celery_throttle/tasks/: __init__.py  processor.py
examples/: demo.py  demo_simple.py
examples/library_usage/: basic_dedicated_worker.py  basic_usage.py  configuration_example.py  custom_task_processor.py  dedicated_worker_pools.py  with_existing_celery_app.py
scripts/: monitor.py  queue_manager_cli.py  run_dispatcher.py  run_worker.py
src/: queue_manager.py  rate_limiter.py  tasks.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dispatcher.py  test_library_integration.py  test_main.py  test_multi_team_isolation.py  test_processor.py  test_processor_injection.py  test_queue_manager.py  test_rate_limiter.py  test_submitter.py  test_token_bucket.py
