[project]
name = "rate-limit-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "httpx>=0.28.1",
    "kombu>=5.5.4",
    "loguru>=0.7.3",
    "redis-rate-limiters>=0.4.5",
    "requests>=2.32.5",
]
