[project]
name = "rate-limit-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "kombu>=5.5.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "redis>=6.4.0",
]
