[project]
name = "celery-throttle"
dynamic = ["version"]
description = "Advanced rate limiting and queue management for Celery workers using Redis-based token bucket algorithms"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Celery Throttle Contributors"}
]
keywords = ["celery", "rate-limiting", "redis", "queue", "throttling", "task-queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "celery>=5.5.3",
    "kombu>=5.5.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=6.4.0",
    "click>=8.0.0",
]


[project.scripts]
celery-throttle = "celery_throttle.cli.main:cli"

[project.urls]
Homepage = "https://github.com/xtream1101/celery-throttle"
Repository = "https://github.com/xtream1101/celery-throttle"
Issues = "https://github.com/xtream1101/celery-throttle/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celery_throttle"]

[tool.hatch.version]
path = "celery_throttle/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.2",
    "fakeredis[lua]>=2.28.0",
]
